--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_flip_counter: ^0.2.0
   flutter_staggered_animations: ^1.0.0
   intl: ^0.17.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
