--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.1.5
   flutter_svg: ^1.1.3
-  location: ^4.4.0
+  #location: ^4.4.0
   google_maps_flutter: ^2.1.10
   geolocator: ^9.0.1
   geocoding: ^2.0.4
